--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@react-firebase/auth": "^0.2.9",
     "bootstrap": "^4.3.1",
+    "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.0",
     "jquery": "^3.4.1",
+    "puppeteer": "^1.16.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
